# language-tutor

./: .gitignore  LICENSE  README.md  changelog.txt  pyproject.toml  tmp_nova_check.py
backend/app/: dependencies.py  main.py
backend/app/api/routes/: app_data.py  assessment.py  auth.py  lessons.py
backend/app/chains/: assessment_chain.py  evaluation_chain.py  json_response_parser.py  lesson_chain.py
backend/app/core/: settings.py
backend/app/db/: attempts.py  base.py  demo_usage.py  flashcards.py  learner_state.py  lessons.py  users.py
backend/app/llm/: model_factory.py
backend/app/prompts/: assessment_prompt.py  evaluation_prompt.py  lesson_prompt.py
backend/app/schemas/: app_views.py  assessment.py  auth.py  common.py  doubt_chat.py  flashcard.py  learner_state.py  lesson.py
backend/app/services/: app_data_service.py  assessment_service.py  auth_service.py  demo_lessons.py  doubt_chat_service.py  evaluator_service.py  lesson_generator.py  lesson_service.py  level_progression.py  metrics_processor.py  template_lesson_builder.py
front_end/: pubspec.yaml
front_end/lib/: app_data.dart  main.dart
front_end/lib/models/: app_models.dart
front_end/lib/pages/: dashboard_page.dart  doubt_chat_page.dart  flashcards_page.dart  level_selector_page.dart  loading_page.dart  sign_in_page.dart
front_end/lib/pages/lesson_flow/: assessment_page.dart  learn_page.dart  listening_page.dart  (+4 more)
front_end/lib/services/: api_client.dart
front_end/lib/state/: app_controller.dart
front_end/lib/widgets/: lesson_shell.dart
front_end/test/: widget_test.dart
(+5 files in other folders)
