[project]
name = "language-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]
